@@ -1,82 +1,46 @@
 /*
- * This build file was generated by the Gradle 'init' task.
- *
- * This generated file contains a sample Groovy project to get you started.
- * For more details take a look at the Groovy Quickstart chapter in the Gradle
- * user guide available at https://docs.gradle.org/4.3/userguide/tutorial_groovy_projects.html
+File
+https://github.com/virtualdogbert/GroovyConfigWriter/blob/master/build.gradle
+has been used as basis for this file.
  */
-
-// Apply the groovy plugin to add support for Groovy
-apply plugin: 'groovy'
-apply plugin: 'maven'
-apply plugin: 'idea'
-
-// In this section you declare where to find the dependencies of your project
-repositories {
-    // Use jcenter for resolving your dependencies.
-    // You can declare any Maven/Ivy/file repository here.
-    jcenter()
-    mavenLocal()
-    /*maven {
-        url = "https://i-t.io/m2"
-    }*/
+plugins {
+    id "groovy"
+    id "maven-publish"
+    id "com.jfrog.bintray" version "1.8.4"
+    id "com.jfrog.artifactory" version "4.8.1"
+    id "idea"
+    id "jacoco"
+    id "org.openrepose.gradle.plugins.jaxb" version "2.5.0"
 }
-
+sourceCompatibility = 1.7
+group = "io.infinite"
+version = "1.0.0"
+description = "Groovy Annotation injecting logging code"
+wrapper {
+    gradleVersion = "5.0"
+}
+repositories {
+    jcenter()
+}
+sourceSets {
+    main.groovy.srcDirs = ["src/main/groovy", "generated"]
+    test.groovy.srcDirs = ["src/test/groovy"]
+}
 dependencies {
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.7'
-
-    // Use the latest Groovy version for building this library
     compile 'org.codehaus.groovy:groovy-all:2.5.4'
-
-    // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
-
-    // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.8'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'io.infinite', name: 'bobbin', version: '1.0.0'
-}
-
-buildscript {
-    repositories {
-        mavenCentral()
-        jcenter()
-        mavenLocal()
-        /*maven {
-            url = "https://i-t.io/m2/"
-        }*/
-    }
-    dependencies {
-        classpath "net.saliman:gradle-cobertura-plugin:2.2.4"
-        classpath 'com.github.jacobono:gradle-jaxb-plugin:1.3.5'
-    }
-}
-
-uploadArchives {
-    repositories {
-        mavenLocal()
-        mavenDeployer {
-            repository(url: mavenLocal().url)
-            pom.version = '2.0.0'
-            pom.groupId = 'io.infinite'
-            pom.artifactId = 'blackbox'
-        }
-    }
-}
-
-apply plugin: 'com.github.jacobono.jaxb'
-
-dependencies {
     jaxb 'com.sun.xml.bind:jaxb-xjc:2.2.7'
     jaxb "org.jvnet.jaxb2_commons:jaxb2-basics-ant:0.6.5"
     jaxb "org.jvnet.jaxb2_commons:jaxb2-basics:0.6.4"
     jaxb "org.jvnet.jaxb2_commons:jaxb2-basics-annotate:0.6.4"
 }
-
 configurations {
     jaxb
 }
-
 task jaxb(){
     description 'Converts xsds to classes'
     def jaxbTargetDir = file("generated")
@@ -91,27 +55,79 @@ task jaxb(){
     }
 }
 
-sourceSets {
-
-    main {
-        groovy {
-            srcDirs = ['src/main/groovy', 'generated']
-        }
-    }
-
-    test {
-        groovy {
-            srcDirs = ['src/test/groovy']
-        }
-        resources {
-            srcDirs = ['src/test/resources']
+task sourceJar(type: Jar) {
+    from sourceSets.main.allSource
+    classifier "sources"
+}
+ext {
+    theTitle = "Groovy Annotation injecting logging code"
+    titleForDocumentation = archivesBaseName + " " + version
+    packageTitle = group
+    description = "Groovy Annotation injecting logging code"
+}
+publishing {
+    publications {
+        groovyMaven(MavenPublication) {
+            from components.java
+            artifact(sourceJar) {
+                classifier "sources"
+            }
         }
     }
 }
-
-tasks.withType(GroovyCompile) {
-    configure(groovyOptions.forkOptions) {
-        memoryMaximumSize = '1g'
-        jvmArgs = ['-XX:MaxPermSize=512m', '-Xms512m', '-Xmx1g']
+task jarSrc(type: Jar, dependsOn: classes) {
+    classifier = "sources"
+    from sourceSets.main.allSource
+}
+artifacts {
+    archives(jarSrc)
+}
+bintray {
+    user = System.getProperty("bintrayuser")
+    key = System.getProperty("bintraypassword")
+    publications = ["groovyMaven"]
+    def projectName = project.name
+    def projectDescription = project.description
+    pkg {
+        userOrg = "infinite-technology"
+        repo = "m2"
+        name = "blackbox"
+        desc = "Groovy Annotation injecting logging code"
+        issueTrackerUrl = "https://github.com/INFINITE-TECHNOLOGY/BLACKBOX/issues"
+        vcsUrl = "https://github.com/INFINITE-TECHNOLOGY/BLACKBOX.git"
+        websiteUrl = "https://i-t.io/Blackbox/"
+        licenses = ["Apache-2.0"]
     }
 }
+artifactory {
+    contextUrl = 'http://oss.jfrog.org'
+    publish {
+        repository {
+            repoKey = 'oss-snapshot-local'
+            username = System.getProperty("bintrayuser")
+            password = System.getProperty("bintraypassword")
+        }
+        defaults {
+            publications('groovyMaven')
+            publishArtifacts = true
+            publishPom = true
+        }
+    }
+    resolve {
+        repoKey = 'jcenter'
+    }
+    clientConfig.info.setBuildNumber(System.currentTimeMillis().toString())
+}
+test {
+    testLogging {
+        events "passed", "skipped", "failed"
+        exceptionFormat "full"
+    }
+}
+jacocoTestReport {
+    reports {
+        xml.enabled true
+        html.enabled false
+    }
+}
+check.dependsOn jacocoTestReport
